rewrites intro and reorganizes chapter

--- a/docs/7-interviews/71-introduction.tex
+++ b/docs/7-interviews/71-introduction.tex
@@ -1,33 +1,62 @@
 \section{Introduction}
 
-Earlier chapters introduced a novel modeling tool, \ac{osier}, which sought to
-fill a gap in the literature and available modeling tools by developing a
-flexible multi-objective optimization framework that allows users to incorporate
-concepts of justice, the ``human dimension'' \cite{pfenninger_energy_2014}. This
-is possible because \ac{osier} enables users to optimize any quantifiable
-objective, which encourages modelers to seek input from the communities they
-model for their energy system priorities, as suggested by McGookin et al. 2024
-\cite{mcgookin_advancing_2024}, thereby elevating the recognition and procedural
-aspects of justice described in Chapter \ref{chapter:lit-review}. Additionally,
-\ac{osier} transcends scale limitations due to its flexible design, making it
-useful for both municipalities and larger governing units. This chapter
-attempts to validate these assertions by examining how local and state energy
-planners use \acp{esom} and the ways in which justice does or does not play a
-role in decision-making. To that end, this chapter considers a range of contexts
-in the State of Illinois, including three municipalities (Champaign, Urbana, and
-Naperville), a university with its own microgrid (\acf{uiuc}), and Illinois
-energy organizations (\acf{icc}, \acf{ipa}, \acf{icea}, and the Illinois
-\acf{cub}). This chapter also considers the varied perspectives of different
-energy planning participants within their respective contexts by interviewing
-city planners, a city council member, and various advisory staff. This study
-contributes to the existing literature on participatory and distributed energy
-planning, while also illustrating a path towards a holistic integration of energy
-justice and energy system engineering.
+Recent literature on the challenges facing energy system modeling call for new
+\acp{esom} to address a so-called ``human dimension'' of energy systems
+\cite{pfenninger_energy_2014}. The human dimension of energy systems relates to
+the sociopolitical environment that both shapes and is shaped by access to
+energy. These calls from the literature presuppose that if \acp{esom} can
+adequately capture the human dimension then they can be used to create more
+equitable and just energy policies. However, this argument rests on three
+assumptions. First, that decision-makers use \acp{esom} and their results to
+inform policy choices. Second, that decision-makers consider equity and justice
+when designing policies. Third, that \acp{esom} can be designed in a way that
+properly incorporates the human dimension. To date there are no examples in the
+literature of researchers investigating all three assumptions about energy
+planning with \acp{esom} simultaneously. To address this gap, I investigate how
+the state of Illinois, and some municipalities therein, use \acp{esom} to inform
+energy policy and advance goals of energy justice. I chose Illinois for two
+reasons. First, its emissions reductions and clean energy targets are among the
+most ambitious in the United States, making it an interesting case when
+discussing the role of \acp{esom} in supporting the clean energy transition.
+Second, Illinois has a variety of mechanisms for energy choice due to its status
+as a restructured state but also because there are a number of independent
+municipal utilities and \ac{mca} which add complexity to consumers' energy
+options. To that end, this chapter considers a range of contexts in the State of
+Illinois, including three municipalities (Champaign, Urbana, and Naperville) and
+a university with its own microgrid (\acf{uiuc}). Together, these localities
+provide a representative sample of municipalities and the available energy
+choices within Illinois. Further the results may be extended to other places
+that operate an open energy market. 
+
+In this chapter I advance two arguments. First, the assumption that \acp{esom}
+alone can ever adequately capture the human dimension is false due to the null
+result from Arrow's Impossibility theorem. However, modelers can address the
+human dimension, and thereby address issues of justice, by using \acp{esom} in a
+participatory process that includes diverse perspectives. Earlier in this
+thesis, I argue that \ac{osier}'s design supports and encourages the dialogue
+necessary for these processes. This chapter provides evidence for this
+assertion. Second I argue that, while knowledge deficits contribute to the full
+adoption of \acp{esom} in energy planning, there are structural barriers built
+into energy-related decision-making processes that prevent some municipalities
+from using \acp{esom} effectively. In absence of policies that address these
+structural barriers, it is essential that decision-making bodies with access to
+\acp{esom} develop deliberative processes, supported by \acp{esom}, that include
+voices from those municipalities that are structurally barred from using
+\acp{esom}.
 
 The next section reviews the existing literature on decentralized energy
-planning. Section \ref{section:interview-methods} describes the method for
-collecting and analyzing interview data using thematic analysis. Section
+planning and the intersections between energy justice and energy planning.
+Section \ref{section:markets} provides important context by summarizing the
+complex energy choices that consumers are faced with in Illinois. Section
 \ref{section:cases} introduces the different case regions considered in this
-chapter. Section \ref{section:interview-results} presents the results from the
-interviews. Lastly, Section \ref{section:interview-discussion} discusses the 
-implications for policy and model development.
+chapter as well as a review of the climate and energy plans adopted by each
+municipally. Section \ref{section:interview-methods} describes the method for
+collecting and analyzing interview data using thematic analysis. Section
+\ref{section:interview-results} presents the results from the interviews.
+Lastly, Section \ref{section:interview-discussion} discusses the implications
+for policy and model development.
+
+% Arrow's theorem means that ESOMs can never adequately capture the human
+% dimension by themselves but must be used as part of a participatory
+% decision-making process.
+
