sets up alternative organization of interview chapter

--- a/docs/7-interviews/76-results.tex
+++ b/docs/7-interviews/76-results.tex
@@ -1,9 +1,16 @@
 \section{Results}
 \label{section:interview-results}
-This section explores the results from the analysis of thirteen interviews. It
-is organized according to the five themes derived from thematic analysis. Table
-\ref{tab:themes} summarizes the themes and their sub-categories presented in
-this section.
+This section explores the results from the analysis of thirteen interviews. Table
+\ref{tab:themes} summarizes the themes and their sub-categories identified through
+thematic analysis. However, this section is organized according to the three 
+assumptions about \acp{esom} outlined in the introduction. These assumptions support
+the argument that if \acp{esom} could address the human dimension of energy systems
+then they would be used to advance energy and justice goals. The assumptions are:
+\begin{enumerate}
+    \item Decision-makers use \acp{esom} and their results to inform energy policy.
+    \item Decision-makers make decisions based on considerations of justice.
+    \item \acp{esom} can be designed to capture the human dimensions. 
+\end{enumerate}
 
 \begin{table}[ht!]
     \centering
@@ -13,6 +20,15 @@ this section.
     \input{tables/thematic-analysis.tex}
 \end{table}
 \FloatBarrier
+
+\subsection{Usage of energy models in existing planning processes}
+
+
+\subsection{}
+
+
+%% SECTIONS BELOW WILL EVENTUALLY BE DELETED
+\textcolor{red}{!! DELETE ME !!}
 
 \subsection{Existing planning processes}
 \label{section:planning-processes}
