updates interview chapter based on comments from MFJ and @katyhuff

--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -2,7 +2,8 @@
 \input{7-interviews/71-introduction.tex}
 % Literature Review
 \input{7-interviews/72-literature.tex}
-
+% Arrow's Theorem
+\input{7-interviews/78-arrow.tex}
 \input{7-interviews/75-markets.tex}
 % Case Regions
 \input{7-interviews/74-regions.tex}
