--- a/docs/7-interviews/76-results.tex
+++ b/docs/7-interviews/76-results.tex
@@ -133,9 +133,9 @@ government, conceptualize justice or equity and incorporate it into their
 decision-making processes.
 
 % justice definitions
-First, municipalities prefer the term ``equity'' to ``justice'' which is
+First, municipalities use the term ``equity'' rather than ``justice'' which is
 consistent with the findings of Diezmart\'inez et al
-\cite{diezmartinez_us_2022}. Second, most municipalities do not have formal
+\cite{diezmartinez_us_2022}.  Second, most municipalities do not have formal
 definitions of equity but generally acknowledge disproportionality and
 marginalization. ``The equity angle of it is we don't want historically
 disenfranchised populations or really any segment of the population to be left
@@ -290,12 +290,12 @@ seem to use models --- and surfaces the underlying conditions that prevent the
 use of \acp{esom}. These barriers also relate to the structures that produce
 various injustices and create friction for communities that want to exercise
 agency over their energy choices. I began this study by assuming that
-municipalities needed betters tools to develop energy visions for their
+municipalities needed better tools to develop energy visions for their
 communities, and that municipal governments would be the ones employing
 \acp{esom}. Now, it appears these assumptions do not fully hold.
 
 As shown in Figure \ref{fig:illinois-flow-chart}, consumers and municipalities
-cannot directly participate electricity markets. Instead, there are myriad
+cannot directly participate in electricity markets. Instead, there are myriad
 entities that broker electricity purchases and thus these entities control most
 energy supply decisions. For municipalities that do not have their own electric
 utility, which is vast majority of municipalities in Illinois, these entities
@@ -316,10 +316,10 @@ residents' energy usage in a municipality, inadequate grid infrastructure to
 support \ac{btm} resources, and \acf{mca}.
 
 The first barrier is quite simple. Since municipalities do not control the
-delivery of electricity to their residents, they do not have access to the their
+delivery of electricity to their residents, they do not have access to their
 energy usage data. This barrier challenges both energy modeling and distributive
-justice. One, energy models require electricity demand data to run. Two, details
-about residents' electricity bills could give insight about energy burden in a
+justice. One, energy models require electricity demand data to provide insights. Two, details
+about residents' electricity bills are necessary to fully characterize energy burden in a
 community.
 
 The second barrier is related to aging infrastructure and the ways \acp{iou} can
@@ -356,8 +356,8 @@ kilowatt-hour in the ComED region and 1.6 cents more in the Ameren region
 compared with consumers receiving the default supply
 \cite{office_of_retail_market_development_2025_2025}. Figure \ref{fig:ares-ptc}
 shows the difference in cost between \ac{ares} and the default supply \ac{ptc}
-for each utility region in Illinois over the last six years. Values greater than
-zero indicate years when the cost of electricity from \ac{ares} exceeded the
+for each utility region in Illinois over the last six fiscal years. Values greater than
+zero indicate fiscal years when the cost of electricity from \ac{ares} exceeded the
 cost of the default supply.
 
 \begin{figure}[ht!]
