--- a/docs/7-interviews/77-discussion.tex
+++ b/docs/7-interviews/77-discussion.tex
@@ -14,7 +14,11 @@ are \cite{ben_amer_too_2020,johannsen_municipal_2023,susser_better_2022}
     \item and lack of collaboration between modelers and planners.
 \end{enumerate} 
 Specifying challenges in this way provides a list of issues that can be
-addressed. Unfortunately, the interviews in this study suggest that even if each
+addressed. 
+This list suggests that knowledge deficits are the primary obstacle to the adoption of \acp{esom} at the 
+municipal level. The interviews in this study corroborate that knowledge defecits
+contribute to the disuse of \acp{esom}.
+Unfortunately, the interviews in this study further suggest that even if each
 of these issues were appropriately handled that municipalities would still not
 benefit from the use of energy models. Instead, there are structural barriers to
 the municipal use of energy models. The typical focus of \acp{esom} on national
@@ -37,6 +41,11 @@ a model to create an alternative energy vision than the one provided by
 
 \subsection{How \ac{osier} addresses the ``human dimension''} 
 
+The null result from Arrow's Theorem means there is no single objective or set of objectives
+that can perfectly capture public preferences for energy systems. An \ac{esom} must 
+be used as part of a participatory process. However, \acp{esom} can 
+be more or less easily incorporated in such a process, depending on the \ac{esom} design.
+Designing for greater flexibility and transparency are two ways to make adoption easier.
 \ac{osier} allows for any number of constraints, objectives, and even allows for
 user-defined objectives, a design philosophy consistent with the first principle
 from Elmallah et al. which called for ``place-based'' solutions
