--- a/docs/7-interviews/73-methodology.tex
+++ b/docs/7-interviews/73-methodology.tex
@@ -1,34 +1,41 @@
 \section{Methodology}
 \label{section:interview-methods}
 
-This section describes the methods for selecting, conducting, and analying the interviews.
-First, I describe the analytical approach. Then I discuss the method for selecting interviews
-and provide an anonymized summary of the participants. Lastly, I share a table that summarizes
-the themes that came out of the interviews and which sections discuss each theme.
+This section describes the methods for selecting, conducting, and analying the
+interviews. First, I describe the analytical approach. Then I discuss the method
+for selecting interviews and provide an anonymized summary of the participants.
+Lastly, I share a table that summarizes the themes that came out of the
+interviews and which sections discuss each theme.
 
 
 \subsection{Thematic Analysis}
 This section describes a multiple-case study using interviews with energy
 planners, decision makers, and community advocates at local and state levels.
-The interviewees were chosen to exemplify maximum variation cases
-\cite{flyvbjerg_five_2006}. The participants and cases in this study vary in
-perspective and context in order to create a holistic narrative about energy
-planning within Illinois. A multiple-case study also enhances validity by
-enabling replication and comparison \cite{johannsen_designing_2021,
-yin_case_2018}. Further, since one purpose of this study is to evaluate the
-design and applicability of the tool, \ac{osier}, a multiple-case study design
-will strengthen software changes and feature additions, and support \ac{osier}'s
-use in other locations and contexts. The raw data include interview
-transcriptions and the relevant municipal climate and energy plans, if
-available. The interviews were transcribed with the ``listen and revise'' method
-using the Whisper transcription tool \cite{battaglia_listen_2024}. This method has two steps. 
-First, I transcribe the interview using Whisper. Second, I listen back to the interview and
-revise the transcription to correct errors. Whisper uses
-\ac{ai} to automate the transcription process. Both the data and the \ac{ai}
-model used to transcribe the interview audio were hosted locally (i.e., without
-an internet connection), eliminating privacy concerns
-\cite{battaglia_listen_2024}. Figure \ref{fig:whisper} shows a screenshot of the
-Whisper interface. 
+The municipalities were chosen to exemplify maximum variation cases across the
+different possible mechanisms for energy choice within Illinois shown in Figure
+\ref{fig:illinois-flow-chart} \cite{flyvbjerg_five_2006}. Champaign and Urbana 
+correspond to municipalities that receive electricity from \acp{iou} and 
+can purchase energy through \ac{mca} or the default supply. Naperville and \ac{uiuc}
+represent municipalities with independent utilities and receive electricity 
+from two places. The former contracts with \ac{imea} and the latter owns and operates
+its own generating resources. The interviewees were
+chosen to cover a range of important energy perspectives and contexts to
+create a holistic narrative about energy planning within Illinois. A
+multiple-case study also enhances validity by enabling replication and
+comparison \cite{johannsen_designing_2021, yin_case_2018}. Further, since one
+purpose of this study is to evaluate the design and applicability of the tool,
+\ac{osier}, a multiple-case study design will strengthen software changes and
+feature additions, and support \ac{osier}'s use in other locations and contexts.
+The raw data include interview transcriptions and the relevant municipal climate
+and energy plans, if available. The interviews were transcribed with the
+``listen and revise'' method using the Whisper transcription tool
+\cite{battaglia_listen_2024}. This method has two steps. First, I transcribe the
+interview using Whisper. Second, I listen back to the interview and revise the
+transcription to correct errors. Whisper uses \ac{ai} to automate the
+transcription process. Both the data and the \ac{ai} model used to transcribe
+the interview audio were hosted locally (i.e., without an internet connection),
+eliminating privacy concerns \cite{battaglia_listen_2024}. Figure
+\ref{fig:whisper} shows a screenshot of the Whisper interface. 
 
 \begin{figure}[htbp!]
     \centering
@@ -39,8 +46,9 @@ Whisper interface.
     \label{fig:whisper}
 \end{figure}
 
-The transcribed interviews were initially coded using a deductive approach that involves a
-predefined set of codes. These initial codes aligned with the three aims of this study:
+The transcribed interviews were initially coded using a deductive approach that
+involves a predefined set of codes. These initial codes aligned with the three
+aims of this study:
 \begin{enumerate}
     \item identify how (if) energy models are used to support energy planning at
     local and state levels,
@@ -65,10 +73,12 @@ Figure \ref{fig:taguette} shows a screenshot of the \texttt{Taguette} software.
 
 \subsection{Interview Data Collection}
 
-A total of thirteen interviews were conducted virtually using the Zoom
-teleconferencing software through the second half of 2024 and beginning of 2025,
-using a semi-structured approach based on an interview guide designed according
-to five main topics (for details, see Appendix \ref{chapter:interview-guide}).
+This study consists of thirteen expert interviews, each lasting 60 to 90
+minutes, and a document review of the communities' climate action plans. These
+interviews were conducted virtually using the Zoom teleconferencing software
+through the second half of 2024 and beginning of 2025, using a semi-structured
+approach based on an interview guide designed according to five main topics (for
+details, see Appendix \ref{chapter:interview-guide}).
 \begin{enumerate}
     \item Background --- learn about the interviewees' experience and background
     with energy planning in their context.
