--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -117,5 +117,5 @@
 \acro{irp}[IRP]{integrated resource plan}
 \acro{ptc}[PTC]{price-to-compare}
 \acro{abm}[ABM]{agent-based model}
-
+\acro{iia}[IIA]{independence of irrelevant alternatives}
 
