adds conclusion file

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -29,6 +29,8 @@
 
 \chapter{Energy modeling, planning, and justice}
 \label{chapter:communities}
-\input{7-interviews/70-outline}
+% \input{7-interviews/70-outline}
 
 \chapter{Conclusions}
+\label{chapter:conclusions}
+\input{8-conclusion/80-conclusion.tex}
