--- a/docs/2-literature/21-esoms.tex
+++ b/docs/2-literature/21-esoms.tex
@@ -249,9 +249,10 @@ option'' \cite{taebi_bridging_2017,van_uffelen_revisiting_2024}. Choosing one or
 several objectives to optimize implies a normative premise --- even if the
 results are presented without a corresponding normative conclusion. The same
 could be said for any choice in the development of an \ac{esom}: Spatial scale,
-time scale, which technologies are included in the model, and more. Chapter
-\ref{chapter:modeling-theory} expands on all three forms of uncertainty and
-introduces a conceptual framework for understanding the modeling process through
-the lens of these uncertainties. 
+time scale, which technologies are included in the model, and more. 
+% Chapter
+% \ref{chapter:modeling-theory} expands on all three forms of uncertainty and
+% introduces a conceptual framework for understanding the modeling process through
+% the lens of these uncertainties. 
 
 
