--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -118,4 +118,5 @@
 \acro{ptc}[PTC]{price-to-compare}
 \acro{abm}[ABM]{agent-based model}
 \acro{iia}[IIA]{independence of irrelevant alternatives}
+\acro{ev}[EV]{electric vehicle}
 
